--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ p {
 	width: 100%;
 	height: 100%;
 	color: #ffffff;
-  	background: linear-gradient(to bottom right, #00dbde, #fc00ff);
+  	/*background: linear-gradient(to bottom right, #00dbde, #fc00ff);*/
+  	background: url(../asset/blue-bg-3.jpg);
 }
 
 .welcome{
