--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,88 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Prompt', sans-serif;
 }
 
-p {
+a, p {
 	font-family: 'Ubuntu Condensed', sans-serif;
 }
 
 .header{
-	padding: 22% 0; 
+	padding-top: 15%;
+	padding-bottom: 7%; 
 	width: 100%;
 	height: 100%;
 	color: #ffffff;
   	/*background: linear-gradient(to bottom right, #00dbde, #fc00ff);*/
-  	background: url(../asset/blue-bg-3.jpg);
+  	background: url(../asset/blue-bg-11.jpg);
+  	background-size: cover;
+  	text-align: center;
 }
-
 .welcome{
-	font-size: 2.5em;
 	padding-left: 3%;
-
+}
+.btn:link,
+.btn:visited{
+  text-decoration: none;
+  text-transform:uppercase;
+  position:relative;
+  top:0;
+  left:0;
+  padding:20px 40px;
+  border-radius:100px;
+  display:inline-block;
+  transition: all .5s;
+}
+.btn-white{
+  background:#ffffff;
+  color:#000000;
+}
+.btn:hover{
+  color: #000000;
+  box-shadow:0px 10px 10px rgba(0,0,0,0.2);
+  transform : translateY(-3px);
+}
+.btn:active{
+  box-shadow:0px 5px 10px rgba(0,0,0,0.2)
+  transform:translateY(-1px);
+}
+.btn-bottom-animation-1{
+  animation:comeFromBottom 1s ease-out .8s;
+}
+.btn::after{
+  content:"";
+  text-decoration: none;
+  text-transform:uppercase;
+  position:absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  border-radius:100px;
+  display:inline-block;
+  z-index:-1;
+  transition: all .5s;
+}
+.btn-white::after {
+  background: #ffffff;
+}
+.btn-animation-1:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+@keyframes comeFromBottom{
+  0%{
+    opacity:0;
+    transform:translateY(40px);
+  } 
+  100%{
+    opacity:1;
+    transform:translateY(0);
+  }
+}
+#note{
+	text-align: center;
+	border-radius: 25px; 
+	
+	box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+	margin: 2.5%;
+	padding: 5%;
 }
