--- a/css/style.css
+++ b/css/style.css
@@ -143,30 +143,27 @@ a, p {
 		height: auto;
 	}
 	#note{
-		font-size: 35%;
-		height: 560px; 
+		height: 580px; 
+	}
+	#section-part{
+		width: 50px;
 	}
 }
 
 .section{
 	background: linear-gradient(to bottom right, #fc00ff, #00dbde);
-	padding-top: 2%;
+	padding-top: 7%;
 	padding-bottom: 5%;
-}
-
-#section-container{
-	margin: 0 5%;
-	padding: 0;
-	display: flex;
+	width: 100%;
 }
 
 #section-part{
 	background-color: #ffffff;  
 	border-radius: 25px; 
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
-	margin: 1%;
-	margin-top: 5%;
-	padding: 3%;
+	padding: 10%;
+	padding-top: 0; 
+	margin: 2%;
 	height: 500px;
 	width: 100%;
 }
