--- a/css/style-kontak.css
+++ b/css/style-kontak.css
@@ -135,7 +135,7 @@ iframe {
 
 .contact100-form-title {
   display: block;
-  font-family: "Righteous", cursive;
+  font-family: 'Prompt', sans-serif;
   font-size: 1.5em;
   color: #333333;
   line-height: 1.2;
