--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a, p {
-	font-family: 'Ubuntu Condensed', sans-serif;
-	font-size: 22px; 
+	font-family: "Asap", sans-serif;
+	font-size: 18px; 
 }
 
 .header{
