--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,22 @@ a, p {
 	font-family: "Asap", sans-serif;
 	font-size: 18px; 
 }
-
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: #fff;
+}
+.preloader .loading {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  font: 14px arial;
+}
 .header{
 	padding-top: 15%;
 	padding-bottom: 7%; 
