--- a/css/style-kontak.css
+++ b/css/style-kontak.css
@@ -45,6 +45,65 @@ ul, li {
 	list-style-type: none;
 }
 
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+  padding: 0 100px;
+  box-sizing: border-box;
+  font-size: 1.15em; 
+}
+img#logo {
+  float: left;
+  height: 60%;
+  width: auto;
+  margin-top: 1.25%; 
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+  float: right;
+  display: flex;
+}
+nav ul li {
+  list-style: none; 
+}
+nav ul li a {
+  position: relative;
+  display: block;
+  height: 70px;
+  line-height: 70px;
+  color: #fff;
+  text-decoration: none;
+  padding: 0 20px;
+  transition: .5s; 
+}
+a:hover{
+  text-decoration: none;
+  color: black;
+}
+nav ul li a:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .5s;
+  z-index: -1;
+}
+nav ul li a:hover:before{
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
 input {
 	outline: none;
 	border: none;
@@ -92,7 +151,6 @@ button:hover {
 iframe {
 	border: none !important;
 }
-
 .container {
 	max-width: 1200px;
 }
@@ -109,6 +167,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
+  padding-top: 7%;
   background: #a64bf4;
   background: -webkit-linear-gradient(45deg, #00dbde, #fc00ff);
   background: -o-linear-gradient(45deg, #00dbde, #fc00ff);
