--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,16 @@ a, p {
 #mosaik-musik{
 	overflow: hidden;
 }
-
+@media only screen and (min-width: 748px) and (max-width: 870px) {
+  #button-2{
+    margin-top: 50px;
+  }
+}
+@media only screen and (min-width: 870px) and (max-width: 1100px) {
+  #button-2{
+    margin-top: 80px;
+  }
+}
 @media only screen and (max-width: 767px) {
 	#note img{
 		width: 15%;
