--- a/css/style-kontak.css
+++ b/css/style-kontak.css
@@ -48,14 +48,17 @@ ul, li {
 nav {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
+  right: 0;
+  width: auto;
+  height: 50px;
+  margin-top: 1.5%;
+  margin-right: 1.5%; 
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 1000;
   padding: 0 100px;
   box-sizing: border-box;
-  font-size: 1.15em; 
+  font-size: 1.15em;
+  border-radius: 25px;  
 }
 img#logo {
   float: left;
@@ -75,8 +78,8 @@ nav ul li {
 nav ul li a {
   position: relative;
   display: block;
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
+  line-height: 50px;
   color: #fff;
   text-decoration: none;
   padding: 0 20px;
