--- a/css/style-kontak.css
+++ b/css/style-kontak.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 a {
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 1.7;
 	color: #666666;
 	margin: 0px;
@@ -27,7 +27,6 @@ a:focus {
 a:hover {
 	text-decoration: none;
 }
-
 
 h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
@@ -46,25 +45,23 @@ ul, li {
 }
 
 nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   width: auto;
-  height: 50px;
   margin-top: 1.5%;
   margin-right: 1.5%; 
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 1000;
-  padding: 0 100px;
+  padding: 0 50px;
   box-sizing: border-box;
   font-size: 1.15em;
-  border-radius: 25px;  
+  border-radius: 25px;
+  box-shadow:0px 10px 10px rgba(0,0,0,0.2);  
 }
 img#logo {
-  float: left;
-  height: 60%;
-  width: auto;
-  margin-top: 1.25%; 
+  height: 30px;
+  width: auto; 
 }
 nav ul {
   margin: 0;
