--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,100 @@ a, p {
 #section-part-3{
 	background: linear-gradient(to bottom right, #a600ff, #fc00ff);  
 }
+nav a {
+  font-size: 16px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+}
+
+nav a:focus {
+  outline: none !important;
+}
+
+nav a:hover {
+  text-decoration: none;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0px;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+}
+
+ul, li {
+  margin: 0px;
+  list-style-type: none;
+}
+
+nav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: auto;
+  margin-top: 1.5%;
+  margin-right: 1.5%; 
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+  padding: 0 50px;
+  box-sizing: border-box;
+  font-size: 1.15em;
+  border-radius: 25px;
+  box-shadow:0px 10px 10px rgba(0,0,0,0.2);  
+}
+img#logo {
+  height: 30px;
+  width: auto; 
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+  float: right;
+  display: flex;
+}
+nav ul li {
+  list-style: none; 
+}
+nav ul li a {
+  position: relative;
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  text-decoration: none;
+  padding: 0 20px;
+  transition: .5s; 
+}
+nav a:hover{
+  text-decoration: none;
+  color: black;
+}
+nav ul li a:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .5s;
+  z-index: -1;
+}
+nav ul li a:hover:before{
+  transform-origin: left;
+  transform: scaleX(1);
+}
 .footer{
 	background-color: rgba(0, 0, 0, 0.8); 
 	color: #ffffff;
