--- a/css/style-sejarah.css
+++ b/css/style-sejarah.css
@@ -1,44 +1,11 @@
-.konten-sejarah{
-  margin: 5%;
-}
-.sejarah{
-  text-align: left;
-  border-radius: 25px; 
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
-  padding: 5%;
-  margin: 1%;
-  width: 75%;
-  background-color: #ffffff; 
-}
-#medieval{
-  background: linear-gradient(to bottom right, #00dbde, #4800ff);
-  width: 300px;
-  height: 500px;
-  margin-left: 200px;
-  z-index: -5;
-}
-.footer{
-	background-color: rgba(0, 0, 0, 0.8); 
-	color: #ffffff;
-	box-shadow: 5px 0px 0px rgba(0,0,0,0.6);
-	padding-top: 0.7%;
-	padding-bottom: 0.1%;
-	margin-top: 5%;
-	width: 100%;
-}
-.footer a{
-	margin: 0 auto;
-}
-
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #FFE53B;
-  background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+  background-color: #00dbde;
+  background-image: linear-gradient(147deg, #00dbde 0%, #fc00ff 74%);
   min-height: 100vh;
-  font-family: 'Fira Sans', sans-serif;
   display: flex;
 }
 
@@ -138,8 +105,8 @@ body {
   width: 300px;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  background-image: linear-gradient(147deg, #00dbde 0%, #fc00ff 87%);
+  box-shadow: 4px 13px 30px 1px rgba(252, 0, 255, 0.2);
   border-radius: 20px;
   transform: translateX(-80px);
   overflow: hidden;
@@ -151,7 +118,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
   border-radius: 20px;
   opacity: 0.8;
 }
@@ -201,18 +167,21 @@ body {
   transition: all .4s;
 }
 .blog-slider__code {
+  font-family: "Asap", sans-serif;
   color: #7b7992;
   margin-bottom: 15px;
   display: block;
   font-weight: 500;
 }
 .blog-slider__title {
+  font-family: 'Prompt', sans-serif;
   font-size: 24px;
   font-weight: 700;
   color: #0d0925;
   margin-bottom: 20px;
 }
 .blog-slider__text {
+  font-family: "Asap", sans-serif;
   color: #4e4a67;
   margin-bottom: 30px;
   line-height: 1.5em;
@@ -263,7 +232,7 @@ body {
   }
 }
 .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 8px 0;
+  margin: 8px 0 !important;
 }
 @media screen and (max-width: 768px) {
   .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
@@ -281,7 +250,7 @@ body {
 }
 .blog-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #fd3838;
+  background: #fc00ff;
   height: 30px;
   box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
 }
