--- a/css/style-genre.css
+++ b/css/style-genre.css
@@ -1,7 +1,11 @@
 body{
-	background-color: rgba(0, 0, 0, .8);
 	margin: 0;
 	padding: 0;
+}
+
+#genre-swiper{
+    background: url(../asset/blue-paint-bg.jpg);
+    background-size: cover;
 }
 
 .genre-content{
@@ -17,7 +21,7 @@ body{
 
 .swiper-container{
     width: 100%;
-    padding-top: 50px;
+    padding-top: 65px;
     padding-bottom: 50px;
 }
 .swiper-slide{
@@ -25,7 +29,12 @@ body{
     background-size: cover;
     width: 300px;
     height: 400px;
+    border-radius: 50px 50px 25px 25px;
     background-color: #FFF;
+    box-shadow:0px 10px 10px rgba(0,0,0,0.2);
+}
+.swiper-slide img{
+    border-radius: 25px 25px 0 0;
 }
 
 footer{
@@ -37,22 +46,74 @@ footer{
 }
 
 h3{
-    font: 2em/1.4 "Righteous", cursive;
+    font: 2em/1.4 'Prompt', sans-serif;
     font-weight: 700;
     color: black;
     text-align: center;
 }
 
-a.button1{
-    border: 0.1em solid #FFFFFF;
-    color: #FFFFFF;
-    background-color: #333290;
-    border-radius: 0.5em;
-    float: right;
-    margin: auto 0.3em; 
+.color-button {
+  display: inline-flex;
+  background-image: linear-gradient(147deg, #00dbde 0%, #a600ff 74%);
+  padding: 10px 15px;
+  margin-right: 5px;
+  margin-bottom: 3px;
+  border-radius: 50px;
+  color: #fff;
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+  text-decoration: none;
+  font-weight: 500;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1px;
+  float: right;
 }
 
-a.button1:hover{
-    color: #FFFFFF;
-    background-color: #E62044;
+.color-button:hover{
+  color: #fff;  
+  text-decoration: none;
+  background-image: linear-gradient(147deg, #a600ff 0%, #00dbde 95%);
+  box-shadow: 0px 15px 15px rgba(0,0,0,0.2);
+}
+.row {
+    border-radius: 25px; 
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+    margin: 9% 0 6% 0;
+}
+.row img{
+    border-radius: 25px 0 0 25px;
+    margin-left: -15px;
+    min-height: 100%; 
+}
+
+@media screen and (max-width: 768px) {
+    .row img, .image-box {
+        border-radius: 25px;
+        margin-left: 25px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .image-box {
+      position: relative;
+      overflow: hidden;
+      border-radius: 25px 0 0 25px;
+      margin-left: -15px;
+      min-height: 100%;
+      width: 100%; 
+    }
+}
+@media screen and (max-width: 1199px) {
+    .image-box {
+      position: relative;
+      overflow: hidden;
+      border-radius: 25px;
+      margin-left: -15px;
+      min-height: 100%;
+      width: 100%; 
+    }
+}
+.row img:hover{
+  transform: scale(1.2);
+  transition: 900ms;
+  overflow: hidden;
 }
