--- a/css/style-genre.css
+++ b/css/style-genre.css
@@ -117,3 +117,21 @@ h3{
   transition: 900ms;
   overflow: hidden;
 }
+
+#myBtn {
+  display: none; 
+  position: sticky;
+  float: right;
+  bottom: 20px; 
+  right: 30px;
+  z-index: 99;
+  border: none; 
+  outline: none; 
+  background-color: #ffffff; 
+  cursor: pointer; 
+  font-size: 18px; 
+}
+
+#myBtn:hover {
+  background-color: #ffffff;
+}
