--- a/css/style-genre.css
+++ b/css/style-genre.css
@@ -127,7 +127,7 @@ h3{
   z-index: 99;
   border: none; 
   outline: none; 
-  background-color: #ffffff; 
+  background-color: rgba(0,0,0,0); 
   cursor: pointer; 
   font-size: 18px; 
 }
