--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,8 @@ a, p {
 		min-height: 600px;
 		margin-top: 200px; 
 	}
-  nav {
-    margin: auto;
-    width: 50%;
+  nav ul li {
+    display: none;
   }
 }
 .section-part{
